# breakout-game

./: CMakeLists.txt  README.md
include/: background.hpp  ball.hpp  brick.hpp  constants.hpp  creature.hpp  entity.hpp  interactions.hpp  moving_entity.hpp  paddle.hpp
src/: background.cpp  ball.cpp  brick.cpp  creature.cpp  entity.cpp  interactions.cpp  main.cpp  paddle.cpp
